# Scilla

./: Cargo.toml  LICENSE-MIT  README.md
src/: config.rs  error.rs  main.rs  prompt.rs
src/commands/: account.rs  config.rs  mod.rs  stake.rs  vote.rs
src/misc/: helpers.rs
